--- a/app/src/main/res/layout/activity_team_preview.xml
+++ b/app/src/main/res/layout/activity_team_preview.xml
@@ -8,6 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        android:background="#373737"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
@@ -22,7 +23,7 @@
                 android:id="@+id/backPress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_arrow_back_24"
+                android:background="@drawable/arrow_back_white"
                 android:gravity="left" />
 
             <TextView
@@ -31,7 +32,7 @@
                 android:layout_weight="9"
                 android:gravity="center"
                 android:text="2h 30m Left"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="15sp" />
 
         </LinearLayout>
