--- a/app/src/main/res/layout/activity_add_cash2.xml
+++ b/app/src/main/res/layout/activity_add_cash2.xml
@@ -74,33 +74,33 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:background="@color/light_gray"
-        android:orientation="horizontal"
-        android:weightSum="10">
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:background="@color/light_gray"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:weightSum="10">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:text="Entry"
-            android:textColor="@color/black" />
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="6"-->
+    <!--            android:text="Entry"-->
+    <!--            android:textColor="@color/black" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:drawableLeft="@drawable/indian_rupiya_symbol"
-            android:drawablePadding="4dp"
-            android:padding="7dp"
-            android:text="50"
-            android:textColorHint="#555555"
-            android:textSize="16sp" />
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="4"-->
+    <!--            android:drawableLeft="@drawable/indian_rupiya_symbol"-->
+    <!--            android:drawablePadding="4dp"-->
+    <!--            android:padding="7dp"-->
+    <!--            android:text="50"-->
+    <!--            android:textColorHint="#555555"-->
+    <!--            android:textSize="16sp" />-->
 
-    </LinearLayout>
+    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -130,6 +130,33 @@
 
     </LinearLayout>
 
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:background="@color/light_gray"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:weightSum="10">-->
+
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="40dp"-->
+    <!--            android:layout_weight="6"-->
+    <!--            android:text="Join Contest"-->
+    <!--            android:textColor="@color/black" />-->
+
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="4"-->
+    <!--            android:drawableLeft="@drawable/indian_rupiya_symbol"-->
+    <!--            android:drawablePadding="4dp"-->
+    <!--            android:padding="7dp"-->
+    <!--            android:text="0"-->
+    <!--            android:textColorHint="#555555"-->
+    <!--            android:textSize="16sp" />-->
+    <!--    </LinearLayout>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -137,53 +164,25 @@
         android:background="@color/light_gray"
         android:orientation="horizontal"
         android:weightSum="10">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="6"
-            android:text="Join Contest"
-            android:textColor="@color/black" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:drawableLeft="@drawable/indian_rupiya_symbol"
             android:drawablePadding="4dp"
             android:padding="7dp"
-            android:text="0"
             android:textColorHint="#555555"
             android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/light_gray"
-        android:orientation="horizontal"
-        android:weightSum="10">
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="6"
+            android:layout_weight="8"
             android:gravity="center"
             android:hint="Add Amount"
             android:inputType="number"
             android:textColor="@color/black" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:drawableLeft="@drawable/indian_rupiya_symbol"
-            android:drawablePadding="4dp"
-            android:padding="7dp"
-            android:text="0"
-            android:textColorHint="#555555"
-            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -250,15 +249,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/addCash"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@drawable/border_red"
             android:gravity="center"
-            android:text="Add 50"
+            android:text="Add"
+            android:id="@+id/addCash"
             android:textColor="@color/white"
             android:textStyle="bold" />
-
     </LinearLayout>
 
 </LinearLayout>
