--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,6 +98,15 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upcoming Matches"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:layout_marginStart="15dp"
+                android:textStyle="bold"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewMatchList"
                 android:layout_width="match_parent"
