--- a/app/src/main/res/layout/fragment_cricket.xml
+++ b/app/src/main/res/layout/fragment_cricket.xml
@@ -15,6 +15,15 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="Upcoming Matches"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMatchList"
         android:layout_width="match_parent"
