--- a/app/src/main/res/layout/match_list.xml
+++ b/app/src/main/res/layout/match_list.xml
@@ -33,7 +33,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="9"
                 android:gravity="left"
-                android:textColor="@color/black" />
+                android:textColor="@color/gray"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/lineUp"
@@ -91,8 +92,8 @@
 
             <ImageView
                 android:id="@+id/matchaImage"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_gravity="center" />
 
             <TextView
@@ -122,8 +123,8 @@
 
             <ImageView
                 android:id="@+id/matchbImage"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_gravity="center" />
 
         </LinearLayout>
@@ -144,8 +145,8 @@
                 android:layout_weight="1"
                 android:gravity="left"
                 android:text="MEGA"
-                android:textStyle="bold"
-                android:textColor="@color/green" />
+                android:textColor="@color/green"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
