--- a/app/src/main/res/layout/activity_kycactivity.xml
+++ b/app/src/main/res/layout/activity_kycactivity.xml
@@ -409,6 +409,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:layout_margin="15dp"
+                        android:id="@+id/aadharImage"
                         android:layout_weight="10"
                         android:scaleType="fitXY" />
 
